[tool.poetry]
name = "stable-diffusion-live"
version = "0.1.0"
description = ""
authors = ["various"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp310-cp310-linux_x86_64.whl"}
aitemplate = {url = "https://r2-public-worker.drysys.workers.dev/aitemplate-0.1.dev1-py3-none-any.whl"}
transformers = "*"
diffusers = ">=0.9"
aiohttp = {extras = ["speedups"], version="*"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
